Correct image loading URL.